--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,39 @@
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+#header{
+    width: 100%;
+    bottom: -20px;
+
+}
 .h1, h1 {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+
+body{
+    margin: 0px;
+    padding:0px;
+
+
+}
+footer {
+        background-color: red;
+        position: fixed;
+        width: 100%;
+        bottom: -20px;
+        max-height: 200px;
+    
+      }
+
+footer p{
+
+    padding: 1px;
+
+
 }
